# imitare

./: .travis.yml  Cargo.toml  README.md
.github/workflows/: automerge.yml  rust.yml
src/: fake_file.rs  main.rs
