[package]
name = "imitare"
description = "a fake file generator"
license = "GPL-3.0-or-later"
repository = "https://github.com/mys721tx/imitare"
version = "0.2.0"
authors = ["Yishen Miao <mys721tx@gmail.com>"]
edition = "2021"

[dependencies]
rand = "0.9"
clap = { version = "4.5", features = ["derive"] }
strum = { version = "0.27", features = ["derive", "strum_macros"] }
strum_macros = "0.26"
